# decima-loc

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml  rustdoc.yml
dloc-cli/: Cargo.toml  logo.txt
dloc-cli/src/: logger.rs  main.rs
dloc-cli/src/commands/: group.rs  languages.rs  mod.rs  shared.rs  single.rs  utils.rs
dloc-cli/src/commands/group/: mod.rs
dloc-cli/src/commands/languages/: mod.rs
dloc-cli/src/commands/single/: mod.rs
dloc-core/: Cargo.toml
dloc-core/src/: error.rs  lib.rs  logger.rs
dloc-core/src/games/: chunks.rs  detect.rs  mod.rs
dloc-core/src/games/ds/: error.rs  mod.rs  serialize.rs  structures.rs
dloc-core/src/games/hzd/: error.rs  mod.rs  serialize.rs  structures.rs
dloc-core/src/serialize/: group.rs  mod.rs  private.rs  single.rs
dloc-core/src/utils/: fixed_map.rs  mod.rs
dloc-core/src/utils/types/: mod.rs  u16string.rs  u8string.rs
