[package]
name = "dloc-core"
version = "0.2.0"
authors.workspace = true
edition.workspace = true

[dependencies]
binrw = "0.13"
thiserror = "1.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = ["serialize", "serialize_yaml"]
serialize = ["dep:serde", "dep:serde_json"]
serialize_yaml = ["dep:serde_yaml"]
